--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
     "@types/bun": "^1.1.13",
+    "@types/fast-redact": "^3.0.4",
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
     "eslint-import-resolver-typescript": "^3.6.3",
@@ -41,5 +42,12 @@
   },
   "peerDependencies": {
     "reflect-metadata": "^0.2.2"
+  },
+  "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.734.0",
+    "@colors/colors": "^1.6.0",
+    "fast-redact": "^3.5.0",
+    "winston": "^3.17.0",
+    "winston-transport": "^4.9.0"
   }
 }
