--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.734.0",
     "@colors/colors": "^1.6.0",
+    "deepmerge": "^4.3.1",
     "fast-redact": "^3.5.0",
     "winston": "^3.17.0",
     "winston-transport": "^4.9.0"
