--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "deepmerge": "^4.3.1",
     "fast-redact": "^3.5.0",
     "type-fest": "^4.40.0",
+    "undici": "^7.10.0",
     "winston": "^3.17.0",
     "winston-transport": "^4.9.0"
   }
