--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@shadow-library/common",
   "type": "module",
   "version": "1.0.21",
-  "description": "description",
+  "description": "Essential TypeScript utilities for task management, HTTP clients, caching, logging, configuration, and error handling in the Shadow Library ecosystem",
   "sideEffects": false,
   "scripts": {
     "prepare": "husky",
