--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.734.0",
     "@colors/colors": "^1.6.0",
+    "chokidar": "^5.0.0",
     "deepmerge": "^4.3.1",
     "fast-redact": "^3.5.0",
     "type-fest": "^4.40.0",
